tests/117_while_non_bool_error.scj
// Test 117: while condition must be Bool
let x = 1
while (x) {
    println(1)
}
// ExpectError: While condition must be Bool
